Fixing wrapping of columns

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 }
 
 body {
+    height: 100%;
     margin: 0px;
     background: rgb(42, 41, 54);
     font-family: "Open Sans";
@@ -41,24 +42,26 @@ body {
   text-align: center;
 }
 
+.flex-container{
+  display: flex;
+  flex-flow: row wrap;
+}
+
 .column {
   float: left;
   padding: 15px;
+  flex: 1;
   width: 50%;
   background-color: rgb(40, 40, 40);
   font-size: 20px;
   text-align: center;
 }
 
-.row::after {
-  content:"";
-  display: table;
-  clear: both;
-}
 
-@media screen and (max-width:600px) {
-  .column {
-    width: 100%
+
+@media (max-width:700px) {
+  .flex-container {
+    flex-direction: column
   }
   
 }
@@ -69,10 +72,11 @@ body {
   width: 100%;
   background-color: rgb(35, 35, 35);
   text-align: left;
+  flex-grow: 1;
 }
 
-u1 {
-  list-style: none;
+li {
+  list-style-type: none;
 }
 
 .py {
